crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_not_eq_suggests_inequality.txt
Q = #not-eq?
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:5
  |
1 | Q = #not-eq?
  |     ^^^^^^^^
  |
help: `#not-eq?` corresponds to `!=` inside a node pattern, but this call does not provide both a captured target and a compatible value
